--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,7 @@
   padding: 0;
   box-sizing: border-box;
   font-family: "Poppins", sans-serif;
+  line-height: 1.5;
 }
 
 .empty-button {
@@ -46,6 +47,30 @@ nav a {
 }
 
 .sign-in-up {
+  display: flex;
+  align-items: center;
+}
+
+.hero {
+  display: flex;
+  gap: 20px;
+  padding: 20px 150px;
+}
+
+.hero_text {
+  min-height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.about {
+  display: flex;
+  justify-content: space-around;
+  width: 100%;
+  padding: 20px 150px;
+}
+.about div {
   display: flex;
   align-items: center;
 }
